--- a/css/weather34dashboard.light.css
+++ b/css/weather34dashboard.light.css
@@ -5097,7 +5097,7 @@
   }
   .wurainfall,
   .wuwindspeed {
-    margin-left: 120px;
+    margin-left: 125px;
     padding-top: 0;
     -webkit-box-align: center;
     -ms-flex-align: center;
@@ -5178,8 +5178,8 @@
   }
   .wulargealert {
     position: absolute;
-    margin-top: 27px;
-    margin-left: 98px;
+    margin-top: 29px;
+    margin-left: 105px;
     width: 16em;
   }
   .wulargehumidity {
